@@ -98,10 +98,6 @@ class tx_community_controller_ListGroupsApplication extends tx_community_control
 		$view->setTemplateFile($this->configuration['applications.']['listGroups.']['templateFile']);
 		$view->setLanguageKey($this->LLkey);
 
-		$pageBrowserConfig = $this->configuration['applications.']['listGroups.']['pageBrowser.'];
-		$pageBrowserConfig['numberOfPages'] = ceil($this->groupGateway->getEntryCount() / $pageBrowserConfig['numberOfEntriesPerPage']);
-		$firstGroup = (isset($this->request['page'])) ? (intval($this->request['page']+1)*$pageBrowserConfig['numberOfEntriesPerPage']) - $pageBrowserConfig['numberOfEntriesPerPage'] : 0;
-
 		switch ($this->configuration['applications.']['listGroups.']['listType']) {
 			case 'usersGroups':
 				$user = $this->getRequestedUser();
@@ -116,6 +112,10 @@ class tx_community_controller_ListGroupsApplication extends tx_community_control
 				$groups = $this->groupGateway->getAllGroups(true, $pageBrowserConfig['numberOfEntriesPerPage'], $firstGroup);
 			break;
 		}
+
+		$pageBrowserConfig = $this->configuration['applications.']['listGroups.']['pageBrowser.'];
+		$pageBrowserConfig['numberOfPages'] = ceil(count($groups) / $pageBrowserConfig['numberOfEntriesPerPage']);
+		$firstGroup = (isset($this->request['page'])) ? (intval($this->request['page']+1)*$pageBrowserConfig['numberOfEntriesPerPage']) - $pageBrowserConfig['numberOfEntriesPerPage'] : 0;
 
 		$cObj = t3lib_div::makeInstance('tslib_cObj');
 
