@@ -1,3 +1,7 @@
+2009-04-16 Frank Naegler <typo3@naegler.net>
+
+	* Bugfix: pageBrowser has wrong page count
+
 2009-04-14 Frank Naegler <typo3@naegler.net>
 
 	* adding pagebrowser for the myGroups Widget
